<resources>
    <string name="zhize">\t\t（一）负责市场监督管理和行政执法的有关工作，起草有关法律法规草案，制定工商行政管理规章和政策。　
\n\t\t（二）负责各类企业、农民专业合作社和从事经营活动的单位、个人以及外国(地区)企业常驻代表机构等市场主体的登记注册并监督管理，承担依法查处取缔无照经营的责任。　
\n\t\t（三）承担依法规范和维护各类市场经营秩序的责任，负责监督管理市场交易行为和网络商品交易及有关服务的行为。　　
\n\t\t（四）承担监督管理流通领域商品质量和流通环节食品安全的责任，组织开展有关服务领域消费维权工作，按分工查处假冒伪劣等违法行为，指导消费者咨询、申诉、举报受理、处理和网络体系建设等工作，保护经营者、消费者合法权益。　　
\n\t\t（五）承担查处违法直销和传销案件的责任，依法监督管理直销企业和直销员及其直销活动。　　
\n\t\t（六）负责垄断协议、滥用市场支配地位、滥用行政权力排除限制竞争方面的反垄断执法工作（价格垄断行为除外）。依法查处不正当竞争、商业贿赂、走私贩私等经济违法行为。　　
\n\t\t（七）负责依法监督管理经纪人、经纪机构及经纪活动。　　
\n\t\t（八）依法实施合同行政监督管理，负责管理动产抵押物登记，组织监督管理拍卖行为，负责依法查处合同欺诈等违法行为　　
\n\t\t（九）指导广告业发展，负责广告活动的监督管理工作。　　
\n\t\t（十）负责商标注册和管理工作，依法保护商标专用权和查处商标侵权行为，处理商标争议事宜，加强驰名商标的认定和保护工作。负责特殊标志、官方标志的登记、备案和保护。　　
\n\t\t（十一）组织指导企业、个体工商户、商品交易市场信用分类管理，研究分析并依法发布市场主体登记注册基础信息、商标注册信息等，为政府决策和社会公众提供信息服务。　　
\n\t\t（十二）负责个体工商户、私营企业经营行为的服务和监督管理。　　
\n\t\t（十三）开展工商行政管理方面的国际合作与交流。　　
\n\t\t（十四）领导全国工商行政管理业务工作。　　
\n\t\t（十五）承办国务院交办的其他事项。</string>
    <string name="wangge_connectWay1">    区域负责人：刘警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay2">    区域负责人：杨警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay3">    区域负责人：孙警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay4">    区域负责人：李警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay5">    区域负责人：王警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay6">    区域负责人：秦警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay7">    区域负责人：白警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay8">    区域负责人：刘警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="wangge_connectWay9">    区域负责人：吴警官
\n    QQ：12345678
\n    手机：13312345678
\n    电话：0917—32212314 </string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="main_news">更改模式</string>
    <string name="main_home">附近</string>
    <string name="main_manage_date">更新位置</string>
    <string name="main_friends">好友</string>
    <string name="radio_btn_search_bus">公交路线</string>
    <string name="app_name">金陵工商</string>
    <string name="whatsnew_start_btn">"开始体验"</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="button_about">关于</string>
    <string name="noodledec">\t\t歌谣\n\t\t三秦面条真不赖，擀厚切宽像裤带。面香筋道细又白，爽口耐饥燎的太。\n\t\t解说\n\t\t关中地区的面条其厚、 宽、 长超出人们的想象， 其形状如同腰间所系的裤带。 红、白、绿、黄四色相间， 寓意春、 夏、 秋、 冬四季， 美不胜收； 闻起来， 淡香扑鼻， 吃起来， 入口软如糯米， 嚼起来又筋如牛皮。 </string>
    <string name="guokuidec">\t\t歌谣\n\t\t饼大直径二尺外，又圆又厚像锅盖。陕西关中地区把饼叫锅盔，里酥外脆好捎带。\n\t\t解说\n\t\t锅盔整体呈圆形，直径尺许,厚1寸,重5斤。用料取麦面精粉，压秆和面，浅锅慢火烘烤。外表斑黄，酥活适口，能久放，便携带。在陕西关中地区，锅直径约在七八十公分，而且锅上面用的锅盖也是隆起的，锅盔就象锅盖一般大小，一般模样。</string>
    <string name="lazidec">\t\t歌谣\n\t\t刨（不）说川湘能吃辣，老陕吃辣让人怕。辣面拌盐热油泼，调面夹馍把饭下。\n\t\t解说\n\t\t陕西关中地区吃辣的水准也是当仁不让的。而且，陕西关中地区吃辣吃得精细，吃出了文化，这点恐怕川人和湘人都无法达到。</string>
    <string name="xintianyoudec">\t\t简介\n\t\t陕北民歌，在陕北它叫“信天游”，又称“顺天游”“小曲子”。无论是陕北的信天游，山西的山曲，还是内蒙的爬山调，其歌词都是以七字格二二三式为基本句格式的上下句变文体，而表现则以浪漫主义的比兴手法见长。\n\t\t曲目\n\t\t《兰花花》、《走西口》、《山丹丹开花红艳艳》、《赶牲灵》、《五哥放羊》、《圪梁梁》、《东山上点灯西山上明》。</string>
    <string name="qinqiangdec">\t\t中国最古老的戏剧之一，起于西周，源于西府（核心地区是宝鸡市的岐山【西岐】与凤翔【雍城】)。成熟于秦。秦腔又称乱弹，流行于我国西北的陕西、甘肃、青海、宁夏、新疆等地，其中以宝鸡的西府秦腔口音最为古老，保留了较多古老发音。又因其以枣木梆子为击节乐器，所以又叫“梆子腔”，俗称“桄桄子”（因为梆击节时发出“恍恍”声）。
        \n\t\t2006年5月20日，经国务院批准列入第一批国家级非物质文化遗产名录。</string>
    <string name="nisudec">\t\t泥塑，即用粘土塑制成各种形象的一种民间手工艺。在民间俗称“彩塑”、“泥玩”。发源于宝鸡市凤翔县。流行于陕西、天津、江苏、河南等地。2006年入选中国非物质文化遗产。
\n\t\t陕西凤翔彩绘泥塑，始于先秦西周时期，流传民间三千年之久，是至今我国保留最古老、最具民族特色的泥塑类手工制品。</string>
    <string name="shigudec">\t\t宝鸡石鼓山公园(6张)石鼓山位于渭河以南、宝鸡市区的中部，是秦岭北坡的浅山余脉伸入市区渭河南岸的一块丘陵台地，属国家重点风景名胜区天台山的入口部分。石鼓山山体海拔600多米，因曾出土春秋时期的文物石鼓而得名，1992年被确定为省级重点文物保护单位。石鼓山出土的石鼓具有文学、文物、书法、历史等多种价值，石鼓文为中国现有最早的石刻文字，是汉字形体演变过程中的重要环节，为秦史研究提供了珍贵资料。</string>
    <string name="famensidec">\t\t法门寺位于陕西省宝鸡市扶风县城北10公里处的法门镇，东距西安市120公里，西距宝鸡市96公里。 法门寺旅游区是国家AAAA级景区。始建于东汉末年，恒灵年间，距今约有1700多年历史，有“关中塔庙始祖”之称。发迹于北魏，起兴于隋，鼎盛于唐，被誉为“皇家寺庙”，因安置释迦牟尼佛指骨舍利而成为举国仰望的佛教圣地。</string>
    <string name="honghegudec">\t\t红河谷森林公园位于陕西省眉县营头镇境内，太白山主峰北麓。公园具有秦岭北麓典型的地貌特征，以“幽、奇、峻、秀”的自然景观和历史悠久的人文景观名冠三秦，可谓“天下美景一谷收”。</string>
    <string name="fengxiandec">\t\t凤县古称“凤州”，始建于秦朝。地处秦岐西段，北依主峰，南接紫柏山。凤县自古为入蜀通衢，有“秦蜀咽喉，汉北锁钥”之称，历来是兵家必争之地。近年来当地政府进行经济转型，将旅游作为重要产业。根据相关旅游规划，当地政府计划将凤县最终打造成“西部休闲之都”。政府已经投资数亿建成人造星星月亮河180米高的亚洲第一音乐喷泉。</string>
    <string name="guanshandec">\t\t关山草原旅游风景区是陕西旅游集团公司与陇县人民政府合作开发建设的自然景区，位于陕、甘两省接壤的陇县西南部，距宝鸡市134公里、西安市300公里，是中国西北内陆地区唯一的以高山草甸为主体的具有欧式风情的省级风景名胜区。景区荟翠山峦、槽谷、森林、草原、天象和气候等多种自然景观，春秋相联，长冬无夏，是人们饱览草原风光，骑马射箭，避暑度假，修闲健身，旅游观光的绝胜佳地。</string>
    <string name="gaikuang01">\t\t宝鸡（Baoji，Paoki，West-fu）古称陈仓、雍州，华夏九州之一，嘉陵江源，中国钛谷，是关中——天水经济区副中心城市、陕西省第二大城市。位于东经106°18′~108°03′，北纬33°35′~35°06′。关中平原西部。
\n\t\t宝鸡有八千年文明及两千七百七十余年建城史。誉称“炎帝故里、青铜器之乡，佛骨圣地、社火之乡，周秦文明发祥地、民间工艺美术之乡”。远古姜水育炎帝，商末周原兴周，春秋雍城兴秦，镇国之宝石鼓、何尊、大克鼎及毛公鼎、大盂鼎、散氏盘、虢季子白盘等晚清四大国宝出自于此，法门寺藏佛骨，西府社火、凤翔年画、泥塑等彰显中华工艺。
\n\t\t宝鸡是中国优秀旅游城市、国家卫生城市、国家森林城市、国家园林城市、国家环保模范城市、中国十大生态宜居城市之一，中华环境奖、中国人居环境奖获得城市。宝鸡铁路枢纽是陇海铁路、宝成铁路、宝中铁路交汇处。宝鸡城市精神是“崇德尚礼、和谐包容，闻鸡起舞、开放创新”，城市形象标识是凤凰神鸟。</string>
    <string name="gaikuang02">\t\t8000多年前关桃园遗址开启了宝鸡的文明，7150多年的北首岭遗址是早于仰韶文化半坡遗址的一种文化遗存。5000多年前的炎帝在这里开启了中华农耕文明。宝鸡有700余处旧、新石器时代的人类遗存，市区有距今8000－4000年的先民遗址80余处。除在关桃园遗址（8000年前）发现大量陶器之外，还发现了数十件骨耜。这是在黄河流域第一次发现骨耜。骨耜的出土，说明宝鸡地区原始农业的出现。
\n\t\t宝鸡是周秦王朝发祥地。公元前11世纪，周先祖之一的古公亶父率族人迁徙到岐山下的周原（今宝鸡市岐山县），“古公乃贬戎狄之俗而营筑城郭室屋而邑别居之，作五官有司”（ 《史记·周本纪》），建立了周王朝早期的国家组织。这就是西周最早的都城岐邑，距今已3200多年。古公亶父被后世尊为太王。周在古公亶父死后的季历和文王时期，国势发展很快，先后征服了西落鬼戎、始呼、翳徒之戎，邻近的许多部落和方国也归附于周，巩固了周族在渭水中游的统治，为伐纣灭商，建立西周王朝奠定了基础。
\n\t\t周平王元年（前770年），以秦襄公攘夷，护送平王东迁之功，封襄公为诸侯，赐之岐以西之地，从此，建立了秦国。秦文公四年（前762年），秦在“千渭之会”（今宝鸡市眉县附近）建立国都。秦文公在千渭之汇所建之城称为“陈仓”（今宝鸡市金台区代家湾一带，即古陈仓城遗址，是宝鸡建城史的开端）。秦宪公二年（前714年），为备战攻戎，秦将国都由千渭之会徙往平阳之地（今宝鸡市陈仓区东阳平村），并建有封宫（《史记·秦本纪》）和羽阳宫（《汉书·地理志》）。以此为政治中心，至秦武公十一年（前689年），西起甘肃中部，东至华山一线，整个关中及渭水流域，基本为秦国所控制。秦德公元年（前677年），秦国迁都于雍（今宝鸡市凤翔县）。此后，秦国先后有十八位国君以雍为国都，共历时294年。</string>
    <string name="mugongdec">\t\t春秋五霸之一的秦穆公以任贤著名，他的称霸，正是从招贤开始的。蹇叔和百里奚是秦穆公的左、右宰相，他们二人在当时都是不可多得的人才。     
\n\t\t百里奚家境非常苦，他虽然才学过人，但始终得不到赏识，因此困苦到讨饭度日。后来，百里奚沦为奴隶。晋献公的女儿出嫁到秦国，让百里奚当陪嫁的奴隶。半路上，百里奚逃到楚国，给人家养牛看马。秦穆公发现晋国送来的陪嫁奴隶中少了一个老头，一打听才知道是一个有才德的老人，便派人打听，知道百里奚正在楚国放牛。秦穆公求才心切，就派人去找百里奚，又怕楚国生疑心，就派人带了5张羊皮去楚国说：“我国有个老奴隶逃到了贵国，我们愿意用5张羊皮赎回去处刑”。楚国犯不着因为这么点小事得罪秦国，便派人把百里奚抓起来，让秦国使者带走。百里奚到秦国后。秦穆公和他谈了三天三夜，更觉得他有不凡的治国才能，就把国政大事交给他管。后来，百里奚又竭力推荐蹇叔，秦穆公爱才求贤。又用隆重的礼节请蹇叔出来。由于秦穆公不拘一格选人才用人才，在众多人才的辅佐下，秦国很快富强起来。</string>
    <string name="wenwangdec">\t\t姜子牙是中国古代历史上一位著名人物，同时他在道教和民间的地位也较高。他出身贵族家庭，祖先的封地叫吕，所以他又被称为吕尚。姜子牙生于山东日照，自幼聪慧。据说，他还能预测世界上将要发生的大事。   
\n\t\t当时姜子牙所在的王朝商朝的纣王是一个残暴的人，他统治期间战争不断，为了躲避战乱，姜子牙到中国北方的辽宁隐居了40年，后来又来到西北陕西省的终南山。在那里，他经常到渭河去钓鱼，可是3年中他却一条鱼也没有钓到，而且他的鱼钩还是直的。人们都嘲笑他，他却无动于衷，所以在中国有一句成语叫姜太公钓鱼，愿者上钩。神奇的是，后来他果然钓到一条鱼，在鱼的肚子里有一本兵法书。更巧合的是，当天晚上，周王朝（公元前11世纪-8世纪）的姬昌周文王做了一个梦，梦见一位高人。第二天，他就遇到了姜子牙。姜子牙向周文王讲述了自己的身世，文王当时正为了打败敌人建立王朝而搜罗人才，所以就对他说：我的先祖太公早就寄希望于你了。因此，后人又称他为太公望，在民间一般称他为姜太公。文王给他以极高的地位，并在他的帮助下，消灭了商朝。 在以后的中国各朝代都为他建立了神庙，而道家也传说他升天成仙了。</string>
    <string name="anduchencangdec">\t\t暗渡陈仓，意思是采取正面佯攻，当敌军被我牵刺而集结固守时，我军悄悄派出一支部队迂回到敌后，乘虚而入，进行决定性的突袭。    
\n\t\t此计与声东击西计有相似之处，都有迷惑敌人、隐蔽进攻的作用。二者的不同处是：声东击西，隐蔽的是攻击点；暗渡陈仓，隐蔽的是攻击路线。此计是汉大将军韩信创造。“明修栈道，暗渡陈仓”是古代战争史上的著名成功战例。
\n\t\t秦朝末年，政治腐败，群雄并起，纷纷反秦。刘邦的部队首先进入关中，攻进咸阳。势力强大的项羽进入关中后，逼迫刘邦退出关中。鸿门宴上，刘邦险些丧命。刘邦此次脱险后，只得率部退驻汉中。为了麻痹项羽，刘邦退走时，将汉中通往关中的栈道全部烧毁，表示不再返回关中。其实刘邦一天也没有忘记一定要击败项羽，争夺天下。公元前206年，已逐步强大起来的刘邦，派大将军韩信出兵东征。出征之前，韩信派了许多士兵去修复已被烧毁的栈道，摆出要从原路杀回的架势。关中守军闻讯，密切注视修复栈道的进展情况，并派主力部队在这条路线各个关日要塞加紧防范，阻拦汉军进攻。    
\n\t\t韩信“明修栈道”的行动，果然奏效，由于吸引了敌军注意力，把敌军的主力引诱到了栈道一线，韩信立即派大军绕道到陈仓（今陕西宝鸡县东）发动突然袭击，一举打败章邯，平定三秦，为刘邦统一中原迈出了决定性的一步。 </string>
    <string name="zhoulidec">\t\t周王朝建立之后，统治者在夏礼和商礼的基础上，以“亲亲”和“尊尊”为基本指导思想，综合本族的风俗习惯，制定了一整套礼制，史称“周公制礼”。    
\n\t\t这次制礼的内容非常广泛，大到国家的政治制度，小到个人的日常行为都有详细规定。大的方面包括宗法制、分封制和国家重大活动的制度礼仪，小的方面包括人的婚姻、丧事、成人礼仪、祭祀活动等等。通过周公制礼，统治阶层力图使西周的社会制度、国家制度和人们生活以及思想，都要符合礼的要求，做事以礼为准则。此后，中国两千多年的历史中，虽然朝代更替很多，但西周时周公制礼所确定的各种礼制都被继承了下来，特别是婚姻制度的影响，一直到现在还可以看到周礼的影响（参见“六礼”和“七出三不去”）。    周礼的有关内容可以让我们了解一下当时的详细程度，现摘要如下：办丧事的时候禁止谈笑；远望灵柩的时候不许唱歌；吃饭的时候不要叹息；邻居有丧事，不许在街巷唱歌；听音乐的时候不要唉声叹气。</string>
    <string name="jinjidec">\t\t据《宝鸡县志》记载：“鸡峰插云，县境峰岳之奇，唯鸡山为最；天柱矗立，玉[1] 笋排空； 西连吴岳，东接太华；云绕峰腰，触石时呈五色，鸡栖山顶，惊人只在一鸣。”又载：“三峰如削，徙巅者必援铁索而上，有石鸡大如羊。”《明一统志》 云：“山有三峰并峙，为一邑之冠”。鸡峰山奇景甚多，历来有“三十六景”之说。    宝鸡原称“陈仓”。相传春秋时，秦文公在此狩猎，获雌鸡，后飞至山上化为石鸡，立祠祀为“陈宝”。“得雌者霸，得雄者 王”。到秦穆公时果得霸业。唐至德二年(公元757 年)，陈仓山复闻神鸡啼鸣，声传10余里，皇帝以为这是瑞祥之兆，便下诏改陈仓为“宝鸡”。</string>
    <string name="title_shennongshi">\t\t神农氏是五氏出现的最后一位神祇，中国古代神话人物。他的出现以后，结束了一个时代。</string>
    <string name="title_chenbao">\t\t陈宝夫人祠—现为宝鸡斗鸡台娘娘庙。此祠在中国古代的地神祀典中最富有浪漫色彩，在国内古神中除天、地、龙王之类，应为建立最早。</string>
    <string name="title_guchencang">\t\t“宝鸡”又名“古陈仓”，市区南麓有座山，山上有只石鸡，山名为“鸡峰山”，“宝鸡”因此得名而已。</string>
    <string name="title_jifengshan">\t\t传说远古时，天上有十个太阳，赐给一对天宫瑶池上神鸡，由两位神仙带到鸡峰山顶上。 </string>
    <string name="title_nvdeng">\t\t神农氏，姜姓也。母曰任姒，有蟜氏女，登为少典妃，游华阳，有神龙首，感生炎帝。</string>
    <string name="shennongdec_tv01">\t\t神农氏是五氏出现的最后一位神祇，中国古代神话人物。传说神农一生下来就是个透明肚子，五脏六腑全都能看得见。</string>
    <string name="shennongdec_tv02">\t\t神农氏，据司马贞《三皇本纪》载：“神农氏，姜姓以火德王。母曰女登，女娲氏之女，忎（rén)神龙而生，长于姜水，号历山，又曰烈山氏”。据《孟子·梁惠王章句上》载：“神农，有娲氏之女安登，为少典妃，忎神龙而生帝。承庖羲之本，（伏羲氏禅位与神农氏）以火德王。”故曰：“炎帝”。 斲(zhuó)木为耜，揉水为耒，耒耜（lěi sì ）之利以教天下，故号“神农”。一次，神农氏在深山老林采药，被一群毒蛇围住。毒蛇一起向神农氏扑去，有的缠腰，有的缠腿，有的缠脖子，想致神农氏于死地。神农氏寡不敌众，终被咬伤倒地，血流不止，浑身发肿。他忍痛高喊：“西王母，快来救我。”王母娘娘闻听呼声后，立即派青鸟衔着她的一颗救命解毒仙丹在天空中盘旋窥瞰，终于在一片森林里找到了神农氏。毒蛇见到了王母的使者青鸟，都吓得纷纷逃散。
\n\t\t青鸟将仙丹喂到神农氏口里，神农氏逐渐从昏迷中清醒。青鸟完成使命后翩然腾云驾雾回归。神农氏感激涕零，高声向青鸟道谢，哪知，一张口，仙丹落地，立刻生根发芽长出一棵青草，草顶上长出一颗红珠。神农氏仔细一看，与仙丹完全一样，放入口中一尝，身上的余痛全消，便高兴地自言自语：“有治毒蛇咬伤的药方了！”于是，给这味草药取名“头顶一颗珠”。后来，药物学家给它命名为“延龄草”。</string>
    <string name="chenbaodec_tv01">\t\t陈宝夫人祠——现为宝鸡斗鸡台娘娘庙。现存祠庙规模不足为奇，但就该祠庙的历史而论，极不寻常。此祠在中国古代的地神祀典中最富有浪漫色彩，在国内古神中除天、地、龙王之类，应为建立最早。</string>
    <string name="chenbaodec_tv02">\t\t【其一】关于陈宝，必先从鸡峰山说起。
\n\t\t传说雌鸡在鸡峰山化成石头，经过了八代，到了秦穆公时。有一次，秦穆公也来陈仓山上狩猎，有一个猎人捕获了一只怪兽，似猪非猪，便拉来献给秦穆公。路上遇见了两个娃娃，告知猎人：“这是姑娘变的妖精，名叫猬，常常钻进坟墓，啃吃人的脑浆。”猎人听了捶打女妖精的头，准备击杀她，她忽然说起话来：“这两个娃娃是一对男女，都是陈仓的宝贝，捉住男的能称雄，逮住女的能称霸。”猎人一听就去捉那两个娃娃，这两个娃娃变成了一双漂亮的神鸡，雌的飞入了陈宝祠中，雄的飞向南阳。后来秦穆公成了五霸之一。
\n\t\t【其二】据《史记●索隐》引《晋泰康地志》记载：秦文公时（公元前765~前716），陈仓地方，有个猎人，捕获一只怪兽，不知是何物？就去献给秦文公。路遇两儿童，竞相嚷着说：“这兽是喟精，常在地下吃死人脑浆”。猎人听后，想打死这怪兽，就用枝条抽打兽头。此时，怪兽突然高喊着说：“这两个儿童，才不是人呢，都是野鸡精，名叫陈宝。得雄的，可成为天下之王；得雌的，能称霸于天下”。儿童的本来面目，被揭露以后，就变成野鸡飞走。雌的，飞到陈仓山北坡，被捕捉后，变成石鸡；雄的，飞往东南。
猎人将这段奇事，禀报给秦文公，文公就在古陈仓县城斗鸡台，即今市东（陕棉十二厂）火车隧洞上，修建祭鸡台，即陈宝祠，也叫陈宝夫人祠；把陈仓地方这种神奇的野鸡，当宝贝鸡，敬奉起来。从此，每年祭祀陈宝，就成为秦国一项规模宏大的盛典。也把陈仓山，逐渐叫为宝鸡山。
\n\t\t【其三】又传：自秦文公修建陈宝夫人祠，到西汉的700多年间。神话传说中的“宝鸡”，又是一对忠贞的恋人，说陈宝夫人的爱人叶君，时时相会。“高祖时五来，文帝二十六来，武帝七十五采，宣帝二十五来，初元(汉元帝年号)以来亦二十来”叶君来时常在夜间，雷鸣风吼，身带五色光彩，直至陈宝夫人祠中。此时，漫山遍野的锦鸡齐声鸣唱。
\n\t\t陈宝夫人祠建于陈仓古城南崖下，依崖建祠，崖壁上筑三孔陈宝夫人仙人洞，当地人称陈宝娘娘(也就是鸡山娘娘)庙，两千多年来香火不绝。
\n\t\t【其四】唐朝肃宗皇帝时又得从一段美妙的传说讲起：安史之乱后，唐明皇同杨贵妃逃出长安，杨贵妃在马嵬破前，饮恨吊死，唐明皇孤驾奔往四川。在危急中，肃宗在风沙之地的灵武即位。接着，雍州（即今凤翔）吃紧。太守怕雍州理城难守，即另筑新城。但新城几筑几塌，终未修成。一夜瑞雪过后，一只凤凰在雍州理城西北三里处，踏出一圈足迹飞去。太守得报见状，欣喜地从凤凰起迹筑城。不久，新城即筑起。肃宗皇帝，闻知雍州有如此奇事佳兆，认为是自己功高德重，就将年号改为“至德”，并下旨令，在雍州新城为他建造行宫。第二年，行宫建好，肃宗即迁驾临时都不得城雍州。紧跟着，更名雍州为凤翔。
\n\t\t太守见皇帝博采祥兆，广纳吉事，又把所辖陈仓县有关如上传闻异事，向唐肃宗禀告了一遍。肃宗听后，大喜！心想：秦文公获“陈宝”，国运兴旺。秦穆公得雄雉，为五霸之冠。汉成帝废陈宝祠，遭狂风报应。既然先朝以陈仓山名陈仓县，当今，陈仓山早已改名为宝鸡鸡山，我何不以宝鸡山而改陈仓县为宝鸡县，使我大唐恢复元气，国强民富呢？肃宗皇帝，便在至德二年，将陈仓县，改名为宝鸡县。</string>
    <string name="guchencangdec_tv01">\t\t宝鸡”又名“古陈仓”，市区南麓有座山，山上有只石鸡，山名为“鸡峰山”，“宝鸡”因此得名而已。古时候人们为了感激陈仓山的灵鸡，改陈仓山为鸡鸣山（即现在的鸡峰山），再后来改为宝鸡。</string>
</resources>