<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@android:color/white"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="3.0dip"
            android:background="@drawable/back_icon"
            android:clickable="true"
            android:gravity="center"
            android:onClick="back" />

        <RelativeLayout
            android:layout_width="150dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@color/light_grey" >

            <EditText
                android:id="@+id/et_search"
                android:layout_width="100dip"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@color/light_grey"
                android:hint="输入地点…"
                android:paddingLeft="5dip"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_action_search" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/back"
            android:background="@drawable/divider1"
            android:paddingTop="10dip" />
    </RelativeLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.07"
        android:clickable="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider1"
        android:paddingTop="5dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_btn_fujin"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/love"
                android:text="@string/main_home"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radio_btn_changemode"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/changemode"
                android:text="@string/main_news"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radio_btn_search_bus"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/direction"
                android:text="@string/radio_btn_search_bus"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/radio_btn_refresh"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/location"
                android:text="@string/main_manage_date"
                android:textColor="@android:color/black" />

            <!--
                 <RadioButton
                android:id="@+id/radio_btn_more"
                style="@style/main_tab_bottom"
                android:layout_marginTop="0.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:text="@string/more" />
            -->
        </RadioGroup>
    </LinearLayout>

</LinearLayout>