<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="0dip"
        android:orientation="horizontal" >

        <com.baoji.jinlinggongshang.util.LockableHorizontalScrollView
            android:id="@+id/ScrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/list_views"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <include layout="@layout/title_bar" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/about_greybg" >

                        <RelativeLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:paddingTop="30dip" >

                                <LinearLayout
                                    android:id="@+id/linea01"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerHorizontal="true"
                                    android:orientation="horizontal"
                                    android:padding="5dip" >

                                    <RelativeLayout
                                        android:id="@+id/shennong"
                                        android:layout_width="145dip"
                                        android:layout_height="210dip"
                                        android:layout_margin="5dip"
                                        android:background="@drawable/shennongshi_selector"
                                        android:clickable="true" >

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentBottom="true"
                                            android:layout_centerHorizontal="true"
                                            android:paddingLeft="8dip"
                                            android:text="@string/title_shennongshi"
                                            android:textSize="10dip" />
                                    </RelativeLayout>

                                    <RelativeLayout
                                        android:id="@+id/chenbao"
                                        android:layout_width="145dip"
                                        android:layout_height="230dip"
                                        android:layout_margin="5dip"
                                        android:background="@drawable/chenbao_selector"
                                        android:clickable="true" >

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentBottom="true"
                                            android:layout_centerHorizontal="true"
                                            android:paddingLeft="8dip"
                                            android:text="@string/title_chenbao"
                                            android:textSize="9dip" />
                                    </RelativeLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/linea02"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/linea01"
                                    android:layout_centerHorizontal="true"
                                    android:orientation="horizontal"
                                    android:padding="5dip" >

                                    <RelativeLayout
                                        android:id="@+id/guchencang"
                                        android:layout_width="145dip"
                                        android:layout_height="210dip"
                                        android:layout_margin="5dip"
                                        android:background="@drawable/guchencang_selector"
                                        android:clickable="true" >

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentBottom="true"
                                            android:layout_centerHorizontal="true"
                                            android:paddingLeft="8dip"
                                            android:text="@string/title_guchencang"
                                            android:textSize="10dip" />
                                    </RelativeLayout>

                                    <RelativeLayout
                                        android:id="@+id/jifengshan"
                                        android:layout_width="145dip"
                                        android:layout_height="210dip"
                                        android:layout_margin="5dip"
                                        android:background="@drawable/jifengshan_selector"
                                        android:clickable="true" >

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentBottom="true"
                                            android:layout_centerHorizontal="true"
                                            android:paddingLeft="8dip"
                                            android:text="@string/title_jifengshan"
                                            android:textSize="10dip" />
                                    </RelativeLayout>
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/linea02"
                                    android:layout_weight="1"
                                    android:orientation="horizontal"
                                    android:padding="10dip" >

                                    <RelativeLayout
                                        android:id="@+id/nvdeng"
                                        android:layout_width="145dip"
                                        android:layout_height="210dip"
                                        android:layout_margin="5dip"
                                        android:background="@drawable/nvdeng_selector"
                                        android:clickable="true" >

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentBottom="true"
                                            android:layout_centerHorizontal="true"
                                            android:paddingBottom="6dip"
                                            android:paddingLeft="8dip"
                                            android:text="@string/title_nvdeng"
                                            android:textSize="10dip" />
                                    </RelativeLayout>

                                    <RelativeLayout
                                        android:id="@+id/nothing"
                                        android:layout_width="145dip"
                                        android:layout_height="210dip"
                                        android:layout_margin="5dip"
                                        android:clickable="true"
                                        android:visibility="gone" >
                                    </RelativeLayout>
                                </LinearLayout>
                            </RelativeLayout>
                        </RelativeLayout>
                    </ScrollView>
                </LinearLayout>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    layout="@layout/slide_menu" />
            </LinearLayout>
        </com.baoji.jinlinggongshang.util.LockableHorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/close_menu_linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="0dip"
        android:layout_marginTop="0dip"
        android:orientation="horizontal"
        android:visibility="gone" >

        <View
            android:id="@+id/close_menu"
            android:layout_width="65dip"
            android:layout_height="fill_parent" >
        </View>

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="false" >
        </View>
    </LinearLayout>

</RelativeLayout>